--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1.32.0", features = ["rt", "full"] }
 tui-big-text = "0.2.1"
 tui-textarea = "0.3.1"
 uuid = { version = "1.4.1", features = ["v4"] }
+toml = "0.8.8"
